<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payer"/>

        <Spinner
            android:id="@+id/payer"
            android:prompt="@string/payer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver"/>

        <Spinner
            android:id="@+id/receiver"
            android:prompt="@string/receipt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:id="@+id/amount"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_amount"
        android:singleLine="true"/>

    <Button
        android:id="@+id/ok"
        android:text="@android:string/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>